--- a/examples/demo.tex
+++ b/examples/demo.tex
@@ -7,5 +7,6 @@
 %\input{demo.ml-g}
 %\input{demo.ml-h}
 %\input{demo.ml-i}
-\input{demo.ml-j}
+%\input{demo.ml-j}
+\input{demo.ml-k}
 \end{document}
